--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -9,4 +9,12 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet> 
+       <servlet-name>Register</servlet-name>        
+    <servlet-class>com.org.Register</servlet-class> 
+    </servlet> 
+    <servlet-mapping> 
+         <servlet-name>Register</servlet-name> 
+      <url-pattern>/Register</url-pattern> 
+    </servlet-mapping> 
 </web-app>
