--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -10,11 +10,11 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
-      <servlet-name>login</servlet-name>
-      <servlet-class>com.org.login</servlet-class> 
+      <servlet-name>Register</servlet-name>
+      <servlet-class>com.org.Register</servlet-class> 
   </servlet>
     <servlet-mapping> 
-         <servlet-name>login</servlet-name> 
-      <url-pattern>/login</url-pattern>
+         <servlet-name>Register</servlet-name> 
+      <url-pattern>/Register</url-pattern>
     </servlet-mapping> 
 </web-app>
