--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -17,4 +17,13 @@
          <servlet-name>Register</servlet-name> 
       <url-pattern>/Register</url-pattern>
     </servlet-mapping> 
+    <servlet>
+      <servlet-name>Search</servlet-name>
+      <servlet-class>com.org.Search</servlet-class> 
+      
+  </servlet>
+    <servlet-mapping> 
+         <servlet-name>Search</servlet-name> 
+      <url-pattern>/Search</url-pattern>
+    </servlet-mapping> 
 </web-app>
