--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -81,4 +81,12 @@
     <servlet-name>OrderInfo</servlet-name>
     <url-pattern>/OrderInfo</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>Connect</servlet-name>
+    <servlet-class>com.org.Connect</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Connect</servlet-name>
+    <url-pattern>/Connect</url-pattern>
+  </servlet-mapping>
 </web-app>
