--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -88,6 +88,8 @@
   <servlet-mapping>
     <servlet-name>ShopCart</servlet-name>
     <url-pattern>/ShopCart</url-pattern>
+  </servlet-mapping>
+  <servlet>
     <servlet-name>Connect</servlet-name>
     <servlet-class>com.org.Connect</servlet-class>
   </servlet>
