--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -146,4 +146,20 @@
     <servlet-name>deleteCartThing</servlet-name>
     <url-pattern>/deleteCartThing</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>deleteAll</servlet-name>
+    <servlet-class>com.org.deleteAll</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>deleteAll</servlet-name>
+    <url-pattern>/deleteAll</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>allMoney</servlet-name>
+    <servlet-class>com.org.allMoney</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>allMoney</servlet-name>
+    <url-pattern>/allMoney</url-pattern>
+  </servlet-mapping>
 </web-app>
